Left undefined field blank instead

--- a/core/templates/core/project_list.html
+++ b/core/templates/core/project_list.html
@@ -50,7 +50,7 @@
                             {% elif library.dlplibraryquantificationandstorage.qc_check == 'N' %}
                                 <p style="margin: 0">Won't Do</p>
                             {% else %}
-                                <p style="margin: 0">Undefined</p>
+                                <p style="margin: 0"></p>
                             {% endif %}
                             
                         {% endfor %}
