--- a/core/templates/core/project_list.html
+++ b/core/templates/core/project_list.html
@@ -12,7 +12,10 @@
                 <th>Project</th>
                 <th class="no-sort-col">Libraries</th>
                 <th class="no-sort-col">Library Type</th>
-                <th>Number of Libraries</th>
+                <th class="no-sort-col">Library Description</th>
+                <th class="no-sort-col">Status</th>
+                <th class="no-sort-col">JIRA Ticket</th>
+                <th>Count</th>
                 <th class="no-sort-col"></th>
             </thead>
             <tbody>
@@ -32,6 +35,32 @@
                         {% endfor %}
                     </td>
                     <td>
+                        {% for library in project.get_libraries %}
+                            <p style="margin: 0" title="{{library.description}}" class="description">{{ library.description }}</p>
+                        {% endfor %}
+                    </td>
+                    <td>
+                        {% for library in project.get_libraries %}
+                            {% if library.dlplibraryquantificationandstorage.qc_check == 'P' %}
+                                {% if library.library_type == 'dlp' and library.get_last_analysis_status %}
+                                    <p style="margin: 0">Done</p>
+                                {% else %}
+                                    <p style="margin: 0">Underway</p>
+                                {% endif %}
+                            {% elif library.dlplibraryquantificationandstorage.qc_check == 'N' %}
+                                <p style="margin: 0">Won't Do</p>
+                            {% else %}
+                                <p style="margin: 0"></p>
+                            {% endif %}
+                            
+                        {% endfor %}
+                    </td>
+                    <td>
+                        {% for library in project.get_libraries %}
+                            <p style="margin: 0"><a href="https://www.bcgsc.ca/jira/browse/{{library.jira_ticket}}">{{ library.jira_ticket }}</a></p>
+                        {% endfor %}
+                    </td>
+                    <td>
                         {{ project.get_libraries|length }}
                     </td>
                     <td>
@@ -47,4 +76,16 @@
         </table>
     </div>
 </div>
+{% endblock %}
+
+{% block datatables_script %}
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $(".description").each(function() {
+                if(this.innerHTML.length > 42){
+                    this.innerHTML = this.innerHTML.substr(0, 42) + '...'
+                }
+            });
+        });
+    </script>
 {% endblock %}
