--- a/core/templates/core/jira_ticket_confirm.html
+++ b/core/templates/core/jira_ticket_confirm.html
@@ -5,19 +5,38 @@
 {% block title %}Confirm JIRA Ticket Details{% endblock %}
 
 {% block body %}
-<div class="container graybg">
-    <form action="{% url 'dlp:jira-ticket-confirm' %}" method="POST">
-        {% csrf_token %}
-        <fieldset>
-            <legend>Jira Ticket Details</legend>
-            <table class="table-condensed">
-                <thead>
-                    {{ form }}
-                </thead>
-            </table>
-         </fieldset>
-        <input class="btn btn-primary btn-sm" type="submit" name="create" value="Create">
-        <a class="btn btn-default btn-sm" href="{% url 'dlp:library_create' %}">Cancel</a>
-    </form>
+    {% if library_type == 'dlp' %}
+        <div class="container graybg">
+            <form action="{% url 'dlp:jira_ticket_confirm' %}" method="POST">
+                {% csrf_token %}
+                <fieldset>
+                    <legend>DLP Jira Ticket Details</legend>
+                    <table class="table-condensed">
+                        <thead>
+                            {{ form }}
+                        </thead>
+                    </table>
+                 </fieldset>
+                <input class="btn btn-primary btn-sm" type="submit" name="create" value="Create">
+                <a class="btn btn-default btn-sm" href="{% url 'dlp:library_create' %}">Cancel</a>
+            </form>
+        </div>
+    {% elif library_type == 'tenx' %}
+        <div class="container graybg">
+            <form action="{% url 'tenx:jira_ticket_confirm' %}" method="POST">
+                {% csrf_token %}
+                <fieldset>
+                    <legend>TenX Jira Ticket Details</legend>
+                    <table class="table-condensed">
+                        <thead>
+                            {{ form }}
+                        </thead>
+                    </table>
+                 </fieldset>
+                <input class="btn btn-primary btn-sm" type="submit" name="create" value="Create">
+                <a class="btn btn-default btn-sm" href="{% url 'tenx:library_create' %}">Cancel</a>
+            </form>
+        </div>
+    {% endif %}
 
 {% endblock %}
