Refactored sequencingupdate, removed remembermeform

--- a/core/templates/core/add_watchers.html
+++ b/core/templates/core/add_watchers.html
@@ -2,22 +2,41 @@
 
 {% load staticfiles %}
 
-{% block title %}Add Watchers to JIRA Ticket{% endblock %}
+{% block title %}JIRA Ticket: {{jira_ticket}}{% endblock %}
 
 {% block body %}
-<div class="container graybg">
-    <form action="{% url 'dlp:jira-ticket-confirm' %}" method="POST">
-        {% csrf_token %}
-        <fieldset>
-            <legend>Select Watchers to Add</legend>
-            <table class="table-condensed">
-                <thead>
-                    {{ form }}
-                </thead>
-            </table>
-         </fieldset>
-        <input class="btn btn-primary btn-sm" type="submit" name="create" value="Create">
-        <a class="btn btn-default btn-sm" href="{% url 'dlp:library_create' %}">Cancel</a>
-    </form>
+    {% if library_type == 'dlp' %}
+        <div class="container graybg">
+            <form action="{% url 'dlp:add_watchers' %}" method="POST">
+                {% csrf_token %}
+                <fieldset>
+                    <legend>Select Watchers to Be Added</legend>
+                    <table class="table-condensed">
+                        <thead>
+                            {{ form }}
+                        </thead>
+                    </table>
+                 </fieldset>
+                <input class="btn btn-primary btn-sm" type="submit" name="create" value="Create">
+                <a class="btn btn-default btn-sm" href="{% url 'dlp:sequencing_create' %}">Cancel</a>
+            </form>
+        </div>
+    {% elif library_type == 'tenx' %}
+        <div class="container graybg">
+            <form action="{% url 'tenx:add_watchers' %}" method="POST">
+                {% csrf_token %}
+                <fieldset>
+                    <legend>Select Watchers to Be Added</legend>
+                    <table class="table-condensed">
+                        <thead>
+                            {{ form }}
+                        </thead>
+                    </table>
+                 </fieldset>
+                <input class="btn btn-primary btn-sm" type="submit" name="create" value="Create">
+                <a class="btn btn-default btn-sm" href="{% url 'tenx:sequencing_create' %}">Cancel</a>
+            </form>
+        </div>
+    {% endif %}
 
 {% endblock %}
