--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -60,7 +60,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td><a href="{% url 'sisyphus:analysisinformation_list' %}">Job Queue</a> <i class="counter">{{ analysisinformation_size }}</i></td>
+                    <td><a href="{% url 'sisyphus:analysisinformation_list' %}">Analyses</a> <i class="counter">{{ analysisinformation_size }}</i></td>
                     <td>
                         <p style="float: right;">
                             <a href="{% url 'sisyphus:analysisinformation_create_choose_library' %}"><i class="fa fa-plus" aria-hidden="true" style="color: green;"></i> Add</a>
