--- a/core/templates/core/library_detail.html
+++ b/core/templates/core/library_detail.html
@@ -7,6 +7,7 @@
 {% block body %}
 
 <div class="container" style="padding: 0 0; margin-top: 0.7em; margin-bottom: 1em;">
+<a href="{% url library_type|add:':ant_colony' library.pk %}"> fefe </a>
     <div style="display: flex; justify-content: space-between; align-items: center;">
         <div>
             <h2 style="margin: 0 0 0 5px; color: #5D4037;">
