--- a/core/static/core/ant_colony/ant_colony.css
+++ b/core/static/core/ant_colony/ant_colony.css
@@ -1,17 +1,21 @@
-body {
+#display_page {
     position: relative;
-    background-size: 2rem 2rem;
-    background-image: radial-gradient(circle, #000000 1px, rgba(0, 0, 0, 0) 1px);)
+    overflow:auto;
+    padding: 10px;
+    background-size: 1.75rem 1.75rem;
+    background-image: radial-gradient(circle, #000000 1px, #fcfeff 1px);)
 }
 
-.col-mb-3 {
-    background-color: #f5f3f3;
+#info_page{
+    background-color: #dce4e8;
+    border-radius: 15px 15px 15px 15px;
+}
+
+.card-body {
+    background-color: #dce4e8;
     margin: 10px;
     height: 80px;
     width: 220px;
     border-radius: 15px 15px 15px 15px;
 }
 
-.library {
-
-}
