--- a/core/templates/core/plate_create.html
+++ b/core/templates/core/plate_create.html
@@ -1,8 +1,7 @@
 {% extends "base_view.html" %}
-
 {% load staticfiles %}
 
-{% block title %}Create Plate{% endblock %}
+{% block title %}Create Pbal Plate{% endblock %}
 
 {% block body %}
 <div class="container graybg">
@@ -54,3 +53,4 @@
     <br>
 </div>
 {% endblock %}
+
